--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,8 +1,43 @@
 
+@media (min-width: 320px){
+    body{
+        font-family: 'Gelasio', serif;
+        /* font-family: 'Amatic SC', cursive; */
+        /* background-color: gainsboro; */
+        background-image: url("../img/movie-reel.jpg");
+        background-repeat: no-repeat;
+        background-position: center center; 
+        background-size: cover; 
+        height: 100vh;
 
-.card-signin {
-    border: 0;
-    border-radius: 1rem;
-    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+        
+    }
+    
+    .card{
+        /* width: 65%; */
+        background-color: rgba(0, 0, 0, 0.8);
+        margin: 25%, 0;
+
+    }
+
+    .card-header{
+        text-align: center;
+        font-family: 'Amatic SC', cursive;
+    }
+
+    a{
+        color: deeppink;
+        display:inline-block;
+        text-decoration: none;
+        font-weight: 500;
+    }
+
+   
 }
-  
+
+@media (min-width: 421px){
+
+    .card{
+      margin: 25%;
+    }
+}
